--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -226,25 +226,56 @@ body {
     Responsive Mirador Container
    ------------------------------ */
 
-    .mirador-container {
-        position: relative;
-        overflow: hidden;
+.mirador-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
         width: 100%;
-        padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+        height: 100%;
+    }
+}
 
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
+@media only screen and (max-width: 576px) {
+    .mirador-container {
+        padding-top: 100%; /* 1:1 Aspect Ratio */
+    }
+}
+
+/* ----------------------
+    Mosaic Visualization
+   ---------------------- */
+
+.mosaic {
+    width: 100%;
+    font-size: 15px;
+}
+
+.mosaic-tile {
+    display: inline-block;
+
+    a {
+
+        img {
+            height: 15px;
+            margin: 0;
+            padding: 0;
+            /* transition: all .25s ease-in-out; */
+        }
+
+        &:hover, &:focus {
+            background-color: #f6754f;
+
+            img {
+                transform: scale(10) translateY(-10px);
+            }
         }
     }
-
-    @media only screen and (max-width: 576px) {
-        .mirador-container {
-            padding-top: 100%; /* 1:1 Aspect Ratio */
-        }
-    }
+}
